<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_pet"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="Pet"/>
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="Chat"/>
    <item
        android:id="@+id/nav_journal"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="Journal"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile"/>
</menu>